Fix alchemist potion teaching